feat(password reset): implement password reset
- create password reset route
- create password reset controller
- create set new password reset route
- add input validations
- refactor code to make it reusable
- write unit and integration tests
- document the added functionality

[Finishes #169817543]
