# src/swagger/swagger.json
@@ -109,6 +109,65 @@
           "User"
         ]
       }
+    },
+    "/reset-password": {
+      "post": {
+        "description": "Request Password reset",
+        "consumes": ["application/json"],
+        "security": [],
+        "parameters": [
+          {
+            "$ref": "#/parameters/reset-password"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "ok"
+          },
+          "422": {
+            "description": "unprocessable entity"
+          },
+          "500": {
+            "description": "internal server error"
+          }
+        },
+        "tags": [
+          "User"
+        ]
+      }
+    },
+    "/new-password": {
+      "put": {
+        "description": "Set new password",
+        "consumes": ["application/json"],
+        "security": [],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "code",
+            "description": "Contain the token",
+            "type": "string",
+            "required": true
+          },
+          {
+            "$ref": "#/parameters/new-password"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "ok"
+          },
+          "422": {
+            "description": "unprocessable entity"
+          },
+          "500": {
+            "description": "internal server error"
+          }
+        },
+        "tags": [
+          "User"
+        ]
+      }
     }
   },
   "parameters": {
@@ -193,6 +252,46 @@
         },
         "example": {
           "email": "testclient@mail.com",
+          "password": "1qaz2wsx"
+        }
+      }
+    },
+    "reset-password": {
+      "in": "body",
+      "name": "Reset Password",
+      "description": "Request for a password reset",
+      "schema": {
+        "type": "object",
+        "required": [
+          "email"
+        ],
+        "properties": {
+          "email": {
+            "type": "string",
+            "default": false
+          }
+        },
+        "example": {
+          "email": "testclient@mail.com"
+        }
+      }
+    },
+    "new-password": {
+      "in": "body",
+      "name": "Set new password",
+      "description": "Set a new password",
+      "schema": {
+        "type": "object",
+        "required": [
+          "password"
+        ],
+        "properties": {
+          "password": {
+            "type": "string",
+            "default": false
+          }
+        },
+        "example": {
           "password": "1qaz2wsx"
         }
       }
